# Shipsmart

./: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  communication_log.txt  config.yaml  pyproject.toml  pytest.ini  requirements.txt  total_tech_stack.md
.github/workflows/: ci.yml
config/database/: config.yaml
config/jupyterhub/: jupyterhub_config.py
config/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  pvc.yaml  secrets.yaml  service-monitor.yaml  service.yaml
config/spark/: spark-defaults.conf
dags/: shipsmart_etl.py
data/raw/: competitor_data.csv  customer_feedback.csv  customers.csv  drivers.csv  drivers_performance.csv  fuel_prices.csv  holidays.csv  locations.csv  route_traffic_history.csv  routes.csv  traffic.csv  vehicle_maintenance.csv  vehicles.csv  warehouse_performance.csv  warehouses.csv  weather.csv
database/: indexes.sql  views.sql
database/init/: 01_schema.sql
database/migrations/: 001_create_orders.sql  002_create_drivers.sql  003_create_vehicles.sql  004_create_warehouses.sql  005_create_routes.sql  006_create_locations.sql  007_create_weather.sql  008_create_traffic.sql  009_create_holidays.sql  010_create_customers.sql  011_create_delivery_events.sql  012_create_drivers_performance.sql  013_create_warehouse_performance.sql
dbt_shipsmart/: README.md
docker/: README.md  compose.yml  jupyterhub-compose.yml  postgres-compose.yml  spark-compose.yml
docker/airflow/: docker-compose.yml
docker/api/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/jupyter/: Dockerfile
docker/ml/: Dockerfile
docs/: data_dictionary.md  data_pipeline_documentation.md  data_quality_report.md  data_simulation_plan.md  database_schema.md
feature_repo/: feature_store.yaml  features.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: AgentControlPanel.tsx  AlertPanel.tsx  ChatInterface.tsx  DashboardGrid.tsx  DataExplorer.tsx  DelayAnalytics.tsx  ModelPerformance.tsx  Sidebar.tsx  (+5 more)
observability/: docker-compose.yml
scripts/: setup.bat  setup.sh  start_spark.sh
tests/: test_api_endpoints.py  test_decision_engine.py  test_llm_integration.py
(+484 files in other folders)
